# pastebin

./: .gitignore  Cargo.toml  README.md
src/: db.rs  errors.rs  handlers.rs  main.rs  renderer.rs  routes.rs
static/css/: styles.css
static/js/: copy.js
templates/: base.html  error.html  index.html  paste.html
