[package]
name = "pastebin-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-utils = "3.0.1"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
env_logger = "0.11.3"
log = "0.4.21"
minijinja = { version = "1", features = ["loader"] }
minijinja-autoreload = "1"
rusqlite = "0.31.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
